# pulmovision

./: CMakeLists.txt  LICENSE  README.md  environment.yml  requirements.txt
slicer_module/PulmoVision/: CMakeLists.txt  PulmoVision.py
slicer_module/PulmoVision/PulmoBackend/: __init__.py  inference.py  msd_lung_dataset.py  pipeline.py  postprocessing.py  preprocessing.py  radiomics.py  training.py  unet3d.py
slicer_module/PulmoVision/Resources/UI/: PulmoVision.ui  pulmovision.ui
slicer_module/PulmoVision/Testing/Python/: backend_smoke_test.py
tests/: __init__.py  test_inference_selection.py  test_integration_pipeline.py
